{
  "sourceLanguage" : "en",
  "strings" : {
    "-" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "-"
          }
        }
      }
    },
    "*" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "*"
          }
        }
      }
    },
    "/" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "/"
          }
        }
      }
    },
    "+" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "+"
          }
        }
      }
    },
    "=" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "="
          }
        }
      }
    },
    "0" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "0"
          }
        }
      }
    },
    "1" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "1"
          }
        }
      }
    },
    "2" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "2"
          }
        }
      }
    },
    "3" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "3"
          }
        }
      }
    },
    "4" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "4"
          }
        }
      }
    },
    "5" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "5"
          }
        }
      }
    },
    "6" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "6"
          }
        }
      }
    },
    "7" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "7"
          }
        }
      }
    },
    "8" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "8"
          }
        }
      }
    },
    "9" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "9"
          }
        }
      }
    },
    "divison" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Geteilt"
          }
        }
      }
    },
    "Divison by 0!" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Geteilt durch 0!"
          }
        }
      }
    },
    "Enable" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Eingeschaltet"
          }
        }
      }
    },
    "equals" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Ist Gleich"
          }
        }
      }
    },
    "General" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Allgemein"
          }
        }
      }
    },
    "Horizontal Slider" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Horizontaler Schieber"
          }
        }
      }
    },
    "minus" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Minus"
          }
        }
      }
    },
    "multiplication" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Multiplikation"
          }
        }
      }
    },
    "negation" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Negation"
          }
        }
      }
    },
    "plus" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Plus"
          }
        }
      }
    },
    "Seconds to wait" : {
      "localizations" : {
        "de" : {
          "variations" : {
            "device" : {
              "iphone" : {
                "stringUnit" : {
                  "state" : "translated",
                  "value" : "Wartezeit"
                }
              },
              "other" : {
                "stringUnit" : {
                  "state" : "translated",
                  "value" : "Sekunden zu warten"
                }
              }
            }
          }
        }
      }
    },
    "Settings" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Einstellungen"
          }
        }
      }
    },
    "SimpleCalc" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "SimpleCalc"
          }
        }
      }
    },
    "Unkown error!" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "variations" : {
            "device" : {
              "iphone" : {
                "stringUnit" : {
                  "state" : "translated",
                  "value" : "Fehler!"
                }
              },
              "other" : {
                "stringUnit" : {
                  "state" : "translated",
                  "value" : "Unbekannter Fehler!"
                }
              }
            }
          }
        }
      }
    }
  },
  "version" : "1.0"
}